# otus-cpp-advanced

./: CMakeLists.txt  CMakeLists_8txt.html  README.md  annotated.html  circle_8cpp.html  circle_8cpp__incl.map  circle_8cpp__incl.md5  circle_8h.html  circle_8h__dep__incl.map  circle_8h__dep__incl.md5  circle_8h__incl.map  circle_8h__incl.md5  circle_8h_source.html  classCircle-members.html  classCircle.html  classCircle__coll__graph.map  classCircle__coll__graph.md5  classCircle__inherit__graph.map  classCircle__inherit__graph.md5  classController-members.html  classController.html  classController__coll__graph.map  classController__coll__graph.md5  classDocument-members.html  classDocument.html  classDocumentView-members.html  classDocumentView.html  classDocumentView__coll__graph.map  classDocumentView__coll__graph.md5  classDocument__coll__graph.map  classDocument__coll__graph.md5  classLine-members.html  classLine.html  classLine__coll__graph.map  classLine__coll__graph.md5  classLine__inherit__graph.map  classLine__inherit__graph.md5  classPrimitive-members.html  classPrimitive.html  classPrimitive__coll__graph.map  (+144 more)
.github/workflows/: release.yml
docs/: Doxyfile
lib/: CMakeLists.txt  async.cpp  async.h  block.h  block_processor.cpp  block_processor.h
lib/io/: consumers.cpp  consumers.h  producers.cpp  producers.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+8 more)
src/: CMakeLists.txt  bayan.cpp  bayan.h  block.h  block_processor.h  cell.hpp  controller.cpp  controller.h  custom_type_traits.hpp  document.cpp  document.h  document_view.cpp  document_view.h  hashing.cpp  hashing.h  io.cpp  io.h  ip.hpp  main.cpp  matrix.hpp  matrix_iter.hpp  model.cpp  model.h  sample.h  search_config.h  server.cpp  server.h  session.cpp  session.h  test.cpp
src/primitive/: circle.cpp  circle.h  line.cpp  line.h  point.cpp  point.h  primitive.h
test/: CMakeLists.txt  test.cpp
